@@ -1,8 +1,9 @@
 From: Andreas K. Huettel <andreas.huettel@physik.uni-r.de>
+From: Chris Reffett <creffett@gentoo.org>
 Subject: Respect PYTHONDONTWRITEBYTECODE environmental variable in PYTHON_INSTALL macro
 Bug-Gentoo: https://bugs.gentoo.org/372407
 Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=672552 for
-Origin: vendor, http://sources.gentoo.org/cgi-bin/viewvc.cgi/gentoo-x86/kde-base/kdelibs/files/kdelibs-4.6.3-bytecode.patch?view=markup
+Origin: vendor, http://sources.gentoo.org/cgi-bin/viewvc.cgi/gentoo-x86/kde-base/kdelibs/files/kdelibs-4.9.3-python-bytecompilation.patch?revision=1.1&view=markup
 
 Add support for PYTHONDONTWRITEBYTECODE environment variable to allow bytecode
 compilation to be disabled.  Work around for lack of Python 3 bytecode support,
@@ -10,11 +11,10 @@ but since Debian packages don't ship bytecode files this is OK for Debian.
 
 --- a/cmake/modules/PythonMacros.cmake
 +++ b/cmake/modules/PythonMacros.cmake
-@@ -23,40 +23,42 @@ MACRO(PYTHON_INSTALL SOURCE_FILE DESINAT
-   # Install the source file.
-   INSTALL(FILES ${SOURCE_FILE} DESTINATION ${DESINATION_DIR})
+@@ -24,52 +24,54 @@ MACRO(PYTHON_INSTALL SOURCE_FILE DESTINA
+   INSTALL(FILES ${SOURCE_FILE} DESTINATION ${DESTINATION_DIR})
  
--  # Byte compile and install the .pyc file.        
+   # Byte compile and install the .pyc file.        
 -  GET_FILENAME_COMPONENT(_absfilename ${SOURCE_FILE} ABSOLUTE)
 -  GET_FILENAME_COMPONENT(_filename ${SOURCE_FILE} NAME)
 -  GET_FILENAME_COMPONENT(_filenamebase ${SOURCE_FILE} NAME_WE)
@@ -25,11 +25,19 @@ but since Debian packages don't ship bytecode files this is OK for Debian.
 -  endif(WIN32)
 -
 -  SET(_bin_py ${CMAKE_CURRENT_BINARY_DIR}/${_basepath}/${_filename})
--  SET(_bin_pyc ${CMAKE_CURRENT_BINARY_DIR}/${_basepath}/${_filenamebase}.pyc)
+-
+-  # Python 3.2 changed the pyc file location
+-  IF(PYTHON_SHORT_VERSION GREATER 3.1)
+-    # To get the right version for suffix
+-    STRING(REPLACE "." "" _suffix ${PYTHON_SHORT_VERSION})
+-    SET(_bin_pyc ${CMAKE_CURRENT_BINARY_DIR}/${_basepath}/__pycache__/${_filenamebase}.cpython-${_suffix}.pyc)
+-  ELSE(PYTHON_SHORT_VERSION GREATER 3.1)
+-    SET(_bin_pyc ${CMAKE_CURRENT_BINARY_DIR}/${_basepath}/${_filenamebase}.pyc)
+-  ENDIF(PYTHON_SHORT_VERSION GREATER 3.1)
 -
 -  FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${_basepath})
 -
--  SET(_message "-DMESSAGE=Byte-compiling ${_bin_py}")
+-  SET(_message "Byte-compiling ${_bin_py}")
 -
 -  GET_FILENAME_COMPONENT(_abs_bin_py ${_bin_py} ABSOLUTE)
 -  IF(_abs_bin_py STREQUAL ${_absfilename})    # Don't copy the file onto itself.
@@ -49,8 +57,9 @@ but since Debian packages don't ship bytecode files this is OK for Debian.
 -    )
 -  ENDIF(_abs_bin_py STREQUAL ${_absfilename})
 -
--  INSTALL(FILES ${_bin_pyc} DESTINATION ${DESINATION_DIR})
-+  # Byte compile and install the .pyc file.
+-  IF(PYTHON_SHORT_VERSION GREATER 3.1)
+-    INSTALL(FILES ${_bin_pyc} DESTINATION ${DESTINATION_DIR}/__pycache__/)
+-  ELSE (PYTHON_SHORT_VERSION GREATER 3.1)
 +  IF("$ENV{PYTHONDONTWRITEBYTECODE}" STREQUAL "")
 +    GET_FILENAME_COMPONENT(_absfilename ${SOURCE_FILE} ABSOLUTE)
 +    GET_FILENAME_COMPONENT(_filename ${SOURCE_FILE} NAME)
@@ -62,30 +71,44 @@ but since Debian packages don't ship bytecode files this is OK for Debian.
 +    endif(WIN32)
 +
 +    SET(_bin_py ${CMAKE_CURRENT_BINARY_DIR}/${_basepath}/${_filename})
-+    SET(_bin_pyc ${CMAKE_CURRENT_BINARY_DIR}/${_basepath}/${_filenamebase}.pyc)
++
++    # Python 3.2 changed the pyc file location
++    IF(PYTHON_SHORT_VERSION GREATER 3.1)
++      # To get the right version for suffix
++      STRING(REPLACE "." "" _suffix ${PYTHON_SHORT_VERSION})
++      SET(_bin_pyc ${CMAKE_CURRENT_BINARY_DIR}/${_basepath}/__pycache__/${_filenamebase}.cpython-${_suffix}.pyc)
++    ELSE(PYTHON_SHORT_VERSION GREATER 3.1)
++      SET(_bin_pyc ${CMAKE_CURRENT_BINARY_DIR}/${_basepath}/${_filenamebase}.pyc)
++    ENDIF(PYTHON_SHORT_VERSION GREATER 3.1)
 +
 +    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${_basepath})
 +
-+    SET(_message "-DMESSAGE=Byte-compiling ${_bin_py}")
++    SET(_message "Byte-compiling ${_bin_py}")
 +
 +    GET_FILENAME_COMPONENT(_abs_bin_py ${_bin_py} ABSOLUTE)
 +    IF(_abs_bin_py STREQUAL ${_absfilename})    # Don't copy the file onto itself.
 +      ADD_CUSTOM_COMMAND(
 +        TARGET compile_python_files
-+        COMMAND ${CMAKE_COMMAND} -E echo ${message}
++        COMMAND ${CMAKE_COMMAND} -E echo ${_message}
 +        COMMAND ${PYTHON_EXECUTABLE} ${_python_compile_py} ${_bin_py}
 +        DEPENDS ${_absfilename}
 +      )
 +    ELSE(_abs_bin_py STREQUAL ${_absfilename})
 +      ADD_CUSTOM_COMMAND(
 +        TARGET compile_python_files
-+        COMMAND ${CMAKE_COMMAND} -E echo ${message}
++        COMMAND ${CMAKE_COMMAND} -E echo ${_message} 
 +        COMMAND ${CMAKE_COMMAND} -E copy ${_absfilename} ${_bin_py}
 +        COMMAND ${PYTHON_EXECUTABLE} ${_python_compile_py} ${_bin_py}
 +        DEPENDS ${_absfilename}
 +      )
 +    ENDIF(_abs_bin_py STREQUAL ${_absfilename})
-+ 
-+    INSTALL(FILES ${_bin_pyc} DESTINATION ${DESINATION_DIR})
++
++    IF(PYTHON_SHORT_VERSION GREATER 3.1)
++      INSTALL(FILES ${_bin_pyc} DESTINATION ${DESTINATION_DIR}/__pycache__/)
++    ELSE (PYTHON_SHORT_VERSION GREATER 3.1)
+       INSTALL(FILES ${_bin_pyc} DESTINATION ${DESTINATION_DIR})
+-  ENDIF (PYTHON_SHORT_VERSION GREATER 3.1)
++    ENDIF (PYTHON_SHORT_VERSION GREATER 3.1)
+ 
 +  ENDIF("$ENV{PYTHONDONTWRITEBYTECODE}" STREQUAL "")
  ENDMACRO(PYTHON_INSTALL)
